Json features (#76)
* migrate jackson databind to use openrewrite

* migrate json path to use openrewrite

* migrate json schema to use openrewrite

* migrate json schema validation to use openrewrite

* migrate json smart to use openrewrite

* migrate serialization-bson to use openrewrite

* migrate serialization-jsonp to use openrewrite

* add json smart version

* define json-path version in recipe

---------

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>